<resources>

    <string name="app_name">Hog Game</string>
    <string name="your_score">Your Score</string>
    <string name="computer_score">Computer Score</string>
    <string name="zero">0</string>
    <string name="turn_total">Turn Total</string>
    <string name="open_drawer">Open Settings</string>
    <string name="close_drawer">Close Settings</string>
    <string name="drawer_title">Settings</string>

    <string-array name="roll_array">
        <item>1 Die</item>
        <item>2 Dice</item>
        <item>3 Dice </item>
        <item>4 Dice </item>
        <item>5 Dice </item>
        <item>6 Dice </item>
        <item>7 Dice </item>
        <item>8 Dice </item>
        <item>9 Dice </item>
        <item>10 Dice </item>
        <item>11 Dice </item>
        <item>12 Dice </item>
        <item>13 Dice </item>
        <item>14 Dice </item>
        <item>15 Dice </item>
        <item>16 Dice </item>
        <item>17 Dice </item>
        <item>18 Dice </item>
        <item>19 Dice </item>
        <item>20 Dice </item>
        <item>21 Dice </item>
        <item>22 Dice </item>
        <item>23 Dice </item>
        <item>24 Dice </item>
        <item>25 Dice </item>
    </string-array>

    <color name="black">#1b1b1b</color>
    <color name="white">#ffffff</color>
    <color name="green">#70c656</color>
    <color name="yellow">#f3ae1b</color>
    <color name="red">#ef4444</color>

    <string name="chooseDifficulty">Please Choose Your Difficulty:</string>
    <string name="enterName">Please Enter Your Name</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="tap_here">Tap here to reset stats</string>
    <string name="howto">How to play Hog</string>
    <string name="instructions1">Take turns with the computer rolling any number of dice up to 25.</string>
    <string name="instructions2">If a player rolls a 1 with one of the dice, that player\'s 
        score is zero for the round.</string>
    <string name="instructions3">A player wins when they reach a score of 100.</string>
    <string name="cancel">Got it!</string>
    <string name="close">Close</string>
    <string name="turnSoundOff">Turn Sound Off</string>
    <string name="turnSoundOn">Turn Sound On</string>
    <string name="credits">Credits</string>
    
    <string name="todd">Gettysburg College Professor Todd W. Neller designed the AI for computer players.</string>
    <string name="amrit">Amrit Dhakal is a Computer Science Major at Gettysburg College in the graduating class of 2017. His contributions to Hog Game included design and implementation of the user interface, implementation of dice animation and implementaiton of credits page. </string>
    <string name="john">John Duncan is a student at Gettysburg college in the graduating class of 2017. He is a Computer Science major and Political Science and Philosophy minor. His contributions to Hog Game included AI integration and implementation of navigation drawer layout.</string>
    <string name="kyle">Kyle Wigley is a Computer Science Major and Business Minor at Gettysburg College in the graduating class of 2016. His contributions to the Hog Game included implementation of sound control and game instructions.</string>
    <string name="sean">Sean Scott is a student at Gettysburg College in the graduating class of 2017. He is a Computer Science major and History minor. His contribution to the project included initial sound implementation.</string>
</resources>