<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|center_horizontal"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|center_horizontal" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="36sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/instructions1"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/instructions2"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/instructions3"
            android:textColor="@color/black"
            android:textSize="24sp" />
    </TableRow>

    <Button
        android:id="@+id/buttonDone"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@drawable/btn_blue"
        android:gravity="center_vertical|center_horizontal"
        android:shadowColor="@color/black"
        android:shadowRadius="4"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>