<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chooseDifficulty"
            android:textColor="@color/black"
            android:textSize="36sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingTop="10dp" >

        <Button
            android:id="@+id/buttonEasy"
            android:layout_width="fill_parent"
            android:layout_height="105dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/btn_green"
            android:gravity="center_vertical|center_horizontal"
            android:shadowColor="@color/black"
            android:shadowRadius="4"
            android:text="@string/easy"
            android:textColor="@color/white"
            android:textSize="28sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp" >

        <Button
            android:id="@+id/buttonMedium"
            android:layout_width="fill_parent"
            android:layout_height="105dp"
            android:background="@drawable/btn_yellow"
            android:shadowColor="@color/black"
            android:shadowRadius="4"
            android:text="@string/medium"
            android:textColor="@color/white"
            android:textSize="28sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/buttonHard"
            android:layout_width="fill_parent"
            android:layout_height="105dp"
            android:background="@drawable/btn_red"
            android:shadowColor="@color/black"
            android:shadowRadius="4"
            android:text="@string/hard"
            android:textColor="@color/white"
            android:textSize="28sp" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp" >

        <EditText
            android:id="@+id/editTextEnteredText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:ems="10"
            android:hint="@string/enterName"
            android:inputType="textPersonName" 
            android:visibility="gone">
            <requestFocus />
        </EditText>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <CheckBox
            android:id="@+id/checkBoxReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tap_here"
            android:textColor="@color/white" 
            android:visibility="gone" />

    </TableRow>

</LinearLayout>