<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- The main content view -->

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="hog.gettysburg.edu.hoggame.MainActivity" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/your_score_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingRight="4dp"
                        android:text="@string/your_score"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/your_score_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="4dp"
                        android:text="@string/zero"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/computer_score_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingRight="4dp"
                        android:text="@string/computer_score"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/computer_score_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="4dp"
                        android:text="@string/zero"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/turn_total_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_weight="1"
                        android:gravity="right"
                        android:paddingRight="4dp"
                        android:text="@string/turn_total"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/turn_total_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingLeft="4dp"
                        android:text="@string/zero"
                        android:textAppearance="?android:attr/textAppearanceMedium" />
                </TableRow>
            </TableLayout>

            <GridLayout
                android:id="@+id/image_grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp" >

            <ImageButton
                android:id="@+id/rollButton"
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:background="@drawable/rollselector" />

            <Spinner
                android:id="@+id/roll_spinner"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
        </LinearLayout>
    </RelativeLayout>

    <!--
        The navigation drawer
        <ListView android:id="@+id/left_drawer"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:choiceMode="singleChoice"
            android:divider="@android:color/transparent"
            android:dividerHeight="0dp"
            android:background="#111"/>
    -->

    <LinearLayout
        android:id="@+id/right_drawer_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:visibility="visible" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10px"
            android:text="Adjust animation delay speed"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="10dp"
            android:max="1500"
            android:progress="0" />
        
        <Button
            android:id="@+id/drawerButtonHowTo"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/btn_blue"
            android:gravity="center_vertical|center_horizontal"
            android:shadowColor="@color/black"
            android:shadowRadius="4"
            android:text="@string/howto"
            android:textColor="@color/white"
            android:textSize="24sp" />
        
        <Button
            android:id="@+id/drawerButtonSound"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_purple"
            android:gravity="center_vertical|center_horizontal"
            android:shadowColor="@color/black"
            android:shadowRadius="4"
            android:text="@string/turnSoundOff"
            android:textColor="@color/white"
            android:textSize="22sp" />

        <Button
            android:id="@+id/drawerButtonEasy"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_green"
            android:gravity="center_vertical|center_horizontal"
            android:shadowColor="@color/black"
            android:shadowRadius="4"
            android:text="@string/easy"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/drawerButtonMedium"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/btn_yellow"
            android:shadowColor="@color/black"
            android:shadowRadius="4"
            android:text="@string/medium"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <Button
            android:id="@+id/drawerButtonHard"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:background="@drawable/btn_red"
            android:shadowColor="@color/black"
            android:shadowRadius="4"
            android:text="@string/hard"
            android:textColor="@color/white"
            android:textSize="24sp" />
        <Button
            android:id="@+id/drawerButtonCredits"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_credits"
            android:gravity="center_vertical|center_horizontal"
            android:shadowColor="@color/black"
            android:shadowRadius="4"
            android:text="@string/credits"
            android:textColor="@color/white"
            android:textSize="22sp" />
        

<!--         <ListView -->
<!--             android:id="@+id/right_drawer" -->
<!--             android:layout_width="match_parent" -->
<!--             android:layout_height="match_parent" -->
<!--             android:layout_gravity="right" -->
<!--             android:background="#123456" -->
<!--             android:choiceMode="singleChoice" -->
<!--             android:divider="@android:color/transparent" -->
<!--             android:dividerHeight="0dp" /> -->
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>